@startuml Eternal Quest
static class Program {
    +{static} goals: List<Goal>
    +{static} Main(args:string): void
    +{static} CreateGoal(): void
    +{static} ReadInt(): int
}
abstract class Goal {
    #name: string
    #description: string
    #completed: Boolean
    #points: int
    +Goal(name:string, description:string, points:int)
    +{abstract} Serialize(): string
    +{abstract} Completed(): Boolean
    +{abstract} GetTotalPoints(): int
    +{abstract} RecordEvent(): void
    +{abstract} EncodeObject(): void
    +{abstract} DecodeObject(): void
    +{abstract} GoalType(): string
}
class SimpleGoal {
    +SimpleGoal(name: string, description: string, points: int)
    +Serialize(): string
    +Completed(): Boolean
    +GetTotalPoints(): int
    +RecordEvent(): void
    +EncodeObject(): void
    +DecodeObject(): void
    +GoalType(): string
}
class EternalGoal {
    -timesCompleted: int
    +EternalGoal(name: string, description: string, points: int)
    +Serialize(): string
    +Completed(): Boolean
    +GetTotalPoints(): int
    +RecordEvent(): void
    +EncodeObject(): void
    +DecodeObject(): void
    +GoalType(): string
}
class ChecklistGoal {
    -bonus: int
    -completions: int
    -targetCompletions: int
    +ChecklistGoal(name: string, description: string, points:int, targetCompletions:int, bonus:int )
    +Serialize(): string
    +Completed(): Boolean
    +GetTotalPoints(): int
    +RecordEvent(): void
    +EncodeObject(): void
    +DecodeObject(): void
    +GoalType(): string
}
class SaveData {
    -fileName: string
    -saveData: List<Goal>
    +SaveData(fileName:string, saveData: List<Goal>)
    +Save:void
    +Load:void
}

Goal <|-- SimpleGoal
Goal <|-- EternalGoal
Goal <|-- ChecklistGoal
Program o-- SaveData


Program "1" o-- "many" Goal
